<resources>
    <!---General Strings-->
    <string name="action_settings">Settings</string>
    <string name="app_name">CoverApp</string>
    <string name="error">Error occurred</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_title">Please select an option</string>
    <string name="submit">Submit</string>

    <!---Login Strings-->
    <string name="enter_name">Please enter your name:</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="default_name">Guest</string>
    <string name="expected_name">I was expecting Kayla, but if you log in again it\'ll work.</string>

    <!---About Strings-->
    <string name="about_next_page">Next Page</string>
    <string name="about_last_page">Last Page</string>
    <!---fragment1-->
    <string name="welcome">Welcome to my cover letter/demo!</string>
    <string name="about1_header">Let\'s start with a little bit about me. I have a Bachelor of Computer Science and am looking to get into the field of software development. I\'ve been most interested in interactive experiences, which is what brought me to doing some app development, among other things. Beyond being comfortable developing apps in Android Studio, I also have:</string>
    <string name="about1_p1">-a lot of experience coding in Java and even more in other object oriented languages(C++ and C#)</string>
    <string name="about1_p2">-done UI programing with a lot of different APIs</string>
    <string name="about1_p3">-been using XML on other projects</string>
    <string name="about1_p4">-experience with various scripting languages and SQL for backend development</string>
    <!---fragment2-->
    <string name="about2_header1">With my previous experience as a QA tester I have:</string>
    <string name="about2_p1">-worked in an agile environment</string>
    <string name="about2_p2">-tested software on multiple different platforms including several apps on Android and iOS</string>
    <string name="about2_p3">-had to change between multiple projects with different standards and a software requiring a high level of adaptability</string>
    <string name="about2_header2">With my previous experience as a QA tester I have:</string>
    <string name="about2_p4">-worked in an agile environment</string>
    <string name="about2_p5">-tested software on multiple different platforms including several apps on Android and iOS</string>
    <string name="about2_p6">-had to change between multiple projects with different standards and a software requiring a high level of adaptability</string>
    <!---fragment3-->
    <string name="about3_header">Now a little about this app:</string>
    <string name="about3_p1">-I made it to serve as both cover letter and a display of my ability</string>
    <string name="about3_p2">-I decided to make a mock store since it seemed fairly appropriate</string>
    <string name="about3_p3">-You can search for items in the database, check their description and add them to the cart</string>
    <string name="about3_p4">-From the cart, you can remove items or proceed to checkout</string>
    <string name="about3_p5">-I used the add items page to test the database, and I felt I might as well include it</string>
    <string name="about3_p6">-That\'s it, please use the nav bar from the top left corner to explore the app</string>

    <!---Add Item Strings-->
    <string name="add_item_name">Name:</string>
    <string name="add_item_desc">Desc:</string>
    <string name="add_item_price">Price:</string>
    <string name="add_item_weight">Weight:</string>
    <string name="add_item_hint_name">Item Name</string>
    <string name="add_item_hint_desc">Item Description</string>
    <string name="add_item_hint_price">$(CND)</string>
    <string name="add_item_hint_weight">(kg)</string>

    <!---Browse Item Strings-->
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_desc">Item Description</string>
    <string name="quantity_short">Qty:</string>
    <string name="reset_database">Reset Database</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Price</string>
    <string name="item_min_price">Min:</string>
    <string name="item_max_price">Max:</string>
    <string name="item_search_button">Search</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="order_by">Order by:</string>
    <string-array name="order_by_array">
        <item></item>
        <item>Alpha: A to Z</item>
        <item>Alpha: Z to A</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
    </string-array>

    <!--Cart Strings-->
    <string name="cart_subtotal">Subtotal:</string>
    <string name="cart_tax">Tax:</string>
    <string name="cart_shipping">Shipping Est.:</string>
    <string name="cart_total">Total:</string>
    <string name="update_quantity">Update</string>
    <string name="remove_from_cart">Remove</string>
    <string name="money_blank">$--</string>
    <string name="cart_checkout">Checkout</string>
    <string name="owners_cart">%s\'s cart</string>
    <string name="cart_is_empty">%s is empty</string>
    <string name="cart_update">update</string>
    <string name="select_province">Select your province:</string>
    <string name="complete_purchase">Complete Purchase</string>
    <string name="complete_toast">This  is as far as this project goes.</string>
    <string-array name="prov_abbr_array">
        <item>ON</item>
        <item>QC</item>
        <item>NS</item>
        <item>NB</item>
        <item>MB</item>
        <item>BC</item>
        <item>PE</item>
        <item>SK</item>
        <item>AB</item>
        <item>NL</item>
        <item>NT</item>
        <item>YT</item>
        <item>NU</item>
    </string-array>

    <!---Contact Strings-->
    <string name="contact">Contact</string>
    <string name="send_email">Send Email</string>
    <string name="phone_call">Make Phone Call</string>
    <string name="thanks">Thank you for your time.</string>
    <string name="email_subject">Interview</string>
    <string name="email_content">We would like to speak with you further about this position.</string>


</resources>
