<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:layout_alignBaseline="@+id/item_search_name"
        android:layout_alignBottom="@+id/item_search_name"
        android:layout_toStartOf="@+id/item_search_name" />

    <EditText
        android:id="@+id/item_search_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_search_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/item_price"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/item_min_price"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:text="@string/item_max_price"
        android:layout_alignBaseline="@+id/item_search_min"
        android:layout_alignBottom="@+id/item_search_min"
        android:layout_toEndOf="@+id/textView7" />

    <EditText
        android:id="@+id/item_search_min"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/item_search_max"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_by"
        android:layout_alignBaseline="@+id/order_by_dropdown"
        android:layout_alignBottom="@+id/order_by_dropdown"
        android:layout_alignEnd="@+id/item_search_min" />

    <Spinner
        android:id="@+id/order_by_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/order_by_array"
        android:gravity="center_vertical"
        android:prompt="@string/order_by"
        android:layout_below="@+id/item_search_max"
        android:layout_alignEnd="@+id/item_search_max"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/item_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_search_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>