<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:id="@+id/cart_footer_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="3dip"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/province_drop_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/prov_abbr_array"
                android:gravity="center_vertical"
                android:prompt="@string/select_province" />

            <Button
                android:id="@+id/cart_checkout_button"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cart_checkout"></Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/select_province"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/cart_subtotal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cart_subtotal_text"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/money_blank"
                android:textAlignment="textStart"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/cart_tax"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cart_tax_text"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/money_blank"
                android:textAlignment="textStart"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/cart_shipping"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cart_shipping_text"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/money_blank"
                android:textAlignment="textStart"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/owners_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owners_cart" />
        </TableRow>

    </TableLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/listviewlayout">
        <ListView
            android:id="@+id/cart_list_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </ListView>
    </LinearLayout>

</LinearLayout>
